Fixed question button alignment

--- a/css/test.scss
+++ b/css/test.scss
@@ -126,7 +126,7 @@ a {
   }
 
   #text-content {
-    width: 85vw;
+    width: 90vw;
 
     #question-font {
       font-size: .9rem;
